[package]
name = "reui"
version = "0.0.0"
authors = ["jazzfool <saveuselon@gmail.com>"]
edition = "2018"
license = "MIT / Apache-2.0"

[dependencies]
bitflags = "1.2"
delegate = "0.3"
indexmap = "1.3"
reclutch = { git = "https://github.com/jazzfool/reclutch" }

[[example]]
name = "showcase"
required-features = ["reclutch/skia"]

[dev-dependencies]
glutin = "0.22.0-alpha5"
