[package]
name = "reui"
version = "0.0.0"
authors = ["jazzfool <saveuselon@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
bitflags = "1.2"
indexmap = "1.3"
reclutch = { git = "https://github.com/jazzfool/reclutch" }

[[example]]
name = "showcase"
required-features = ["reclutch/skia"]

[dev-dependencies]
glutin = "0.22.0-alpha5"

[patch.'https://github.com/jazzfool/reclutch']
reclutch = { git = "https://github.com/zserik/reclutch", branch = "bidir-evq" }
