[package]
name = "reui"
version = "0.0.0"
authors = ["jazzfool <saveuselon@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Rust GUI Toolkit"
homepage = "https://github.com/jazzfool/reui"
repository = "https://github.com/jazzfool/reui"

[features]
app = ["glutin", "reclutch/skia"]
default-themes = []

[dependencies]
reui_derive = { path = "../derive" }
bitflags = "1.2"
indexmap = "1.3"
reclutch = { git = "https://github.com/jazzfool/reclutch" }
thiserror = "1.0"
image = "0.22.3"
glutin = { version = "0.22.0-alpha5", optional = true }

[[example]]
name = "showcase"
required-features = ["app", "default-themes"]
