[package]
name = "thunderclap-macros"
version = "0.0.0"
authors = ["jazzfool <saveuselon@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Proceudral macros for Thunderclap"
homepage = "https://github.com/jazzfool/thunderclap/tree/master/thunderclap-macros"
repository = "https://github.com/jazzfool/thunderclap"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
