[package]
name = "thunderclap"
version = "0.0.0"
authors = ["jazzfool <saveuselon@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Aspirational Rust GUI Toolkit"
homepage = "https://github.com/jazzfool/thunderclap"
repository = "https://github.com/jazzfool/thunderclap"

[features]
default = ["core-widgets", "default-themes"]
app = ["glutin", "reclutch/skia"]
default-themes = []
core-widgets = []
extra-widgets = ["core-widgets"]

[dependencies]
reclutch = { git = "https://github.com/jazzfool/reclutch" }
thunderclap-macros = { path = "../thunderclap-macros" }

bitflags = "1.2"
indexmap = "1.3"
thiserror = "1.0"
paste = "0.1"
lazy_static = "1.4"
ambassador = "0.2"

glutin = { version = "0.22.0-alpha6", optional = true }

[[example]]
name = "counter"
required-features = ["app", "default-themes", "core-widgets"]
